# mcp-ocr

./: AGENTS.md  Dockerfile  LICENSE  README.md  nixpacks.toml  pyproject.toml
src/box_ocr_mcp/: __init__.py
src/box_ocr_mcp/application/: __init__.py
src/box_ocr_mcp/application/use_cases/: __init__.py  extract_text_from_box_image.py
src/box_ocr_mcp/domain/: __init__.py  entities.py  ports.py
src/box_ocr_mcp/infrastructure/: __init__.py
src/box_ocr_mcp/infrastructure/filesystem/: __init__.py  temp_file_manager.py
src/box_ocr_mcp/infrastructure/image/: __init__.py  base64_image_writer.py  file_reference_image_writer.py  pillow_preprocessor.py
src/box_ocr_mcp/infrastructure/ocr/: __init__.py  paddle_ocr_adapter.py
src/box_ocr_mcp/interfaces/: __init__.py
src/box_ocr_mcp/interfaces/mcp/: __init__.py  horizon_server.py  server.py  tools.py
src/mcp_ocr/: __init__.py  extraction.py  image_loader.py  ocr.py  preprocessing.py  schemas.py  server.py
tests/: test_extraction.py  test_image_loader.py  test_ocr.py  test_preprocessing.py  test_server.py
tests/application/: test_extract_text_from_box_image.py
tests/infrastructure/: test_base64_image_writer.py  test_file_reference_image_writer.py  test_paddle_ocr_adapter.py
tests/interfaces/: test_horizon_server.py  test_mcp_tools.py
