[project]
name = "box-ocr-mcp"
version = "0.1.0"
description = "MCP server for OCR on cardboard box images"
authors = [
    { name = "Osman Pérez", email = "osmanperez66@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.2",
    "mcp>=1.28.0",
    "paddleocr>=3.7.0",
    "paddlepaddle>=3.3.1",
    "pillow>=12.2.0",
]

[project.scripts]
box-ocr-mcp = "box_ocr_mcp.interfaces.mcp.server:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
