[project]
name = "mcp-ocr"
version = "0.1.0"
description = "FastMCP server for literal OCR extraction from image URLs or base64 payloads"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "opencv-contrib-python-headless>=4.10.0.84",
    "pillow>=12.2.0",
    "pydantic>=2.12.5",
    "rapidocr-onnxruntime>=1.4.4",
]

[project.scripts]
mcp-ocr = "mcp_ocr.server:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.uv]
exclude-dependencies = ["opencv-contrib-python", "opencv-python"]
